[metadata]
name = pulumi-python-oke-multi-k8s
version = 1.0.0
python_requires = '>=3.12'
description = OCI Pulumi Project
author = flexyz
author_email = contact@flexyz.work
url = https://flexyz.work
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    pulumi
    pulumi-oci
    oci
    # python-dotenv
    pulumi-kubernetes
    pytest

[options.extras_require]
dev =
    pre-commit==3.8.0
    yapf==0.40.2
    mypy==1.11.2
    autoflake==2.3.1
    isort==5.13.2
    flake8==7.1.1

[yapf]
based_on_style = pep8
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true
continuation_align_style = SPACE

[isort]
multi_line_output = 5
line_length = 119
known_first_party = pulumi-python-oke-full-k8s
known_third_party = pulumi, pulumi_oci, oci

[flake8]
ignore = I100, I201
# ignore = E203, E266, E501, W503, W504
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 119

[mypy]
disallow_untyped_defs = false

[build-system]
requires = ['setuptools>=42', 'wheel']
build-backend = 'setuptools.build_meta'
