[metadata]
name = pulumi-python-oke-multi-k8s
version = 0.1.0
python_requires = '>=3.12'
description = OCI Pulumi Project
author = flexyz
author_email = contact@flexyz.work
url = https://flexyz.work
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    pulumi
    pulumi-oci
    oci
    ruff                    # 주 린터/포매터로 사용
    pulumi-kubernetes
    pytest

[options.extras_require]
dev =
    pre-commit==3.8.0      # Git hook 관리
    mypy==1.11.2           # 타입 체킹 (Ruff가 대체하지 않는 기능)
    flake8==7.1.1          # VS Code 호환성을 위해 유지 (119자 설정용)
    # 아래 도구들은 Ruff가 대체하므로 제거
    # yapf==0.40.2         # Ruff format이 대체
    # autoflake==2.3.1     # Ruff UP 규칙이 대체
    # isort==5.13.2        # Ruff I 규칙이 대체
    # unify==0.5           # Ruff Q 규칙이 대체
    # flake8-bugbear       # Ruff B 규칙이 대체
    # flake8-builtins      # Ruff에 포함
    # flake8-coding        # 불필요 (Python 3.12+)
    # flake8-import-order  # Ruff I 규칙이 대체
    # flake8-polyfill      # 불필요
    # flake8-quotes        # Ruff Q 규칙이 대체

[mypy]
# 타입 체크 설정 (Ruff가 대체하지 않는 기능)
disallow_untyped_defs = false
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[flake8]
# VS Code 호환성을 위해 유지 (119자 설정)
ignore = E203, W503, I100, I201, Q000  # Ruff와 중복되는 규칙 무시
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-line-length = 119                   # 119자 제한 유지 (VS Code 에러 방지)
inline-quotes = single                  # Ruff와 일관성 유지
multiline-quotes = double
docstring-quotes = double
per-file-ignores =
    __init__.py:F401                    # __init__.py에서 import 미사용 허용

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
